--- a/style.css
+++ b/style.css
@@ -4,3 +4,27 @@
     padding: 0;
     margin: 0;
 }
+
+
+/* header */
+
+
+/* nav */
+
+
+/* main */
+
+
+/* aboutMe */
+
+
+/* projects */
+
+
+/* skills */
+
+
+/* contact */
+
+
+/* footer */
