--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@
     margin: 0;
 }
 
+.gray {
+    background-color: #C0C0C0;
+}
+
+.eightypercent {
+    width: 80%;
+    margin: 0 auto;
+}
+
 
 /* header */
 
@@ -14,6 +23,10 @@
 
 /* main */
 
+main {
+    width: 100%;
+}
+
 
 /* aboutMe */
 
@@ -22,6 +35,17 @@
 
 
 /* skills */
+
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.rating img {
+    width: 1.3rem;
+    padding-top: 1rem;
+}
 
 
 /* contact */
