--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@
 }
 
 .gray {
-    background-color: #C0C0C0;
+    background-color: #D3D3D3;
 }
 
 .eightypercent {
     width: 80%;
     margin: 0 auto;
+    padding: 2rem 2rem;
 }
 
 
@@ -40,12 +41,16 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-content: center;
 }
 
 .rating img {
     width: 1.3rem;
     padding-top: 1rem;
 }
+
+
+/* accounts */
 
 
 /* contact */
